# os-primary

./: Cargo.toml
.cargo/: config  config.toml
.github/workflows/: rust.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs  interrupts.rs  should_panic.rs  stack_overflow.rs
