[package]
name = "os-primary"
version = "0.1.0"
authors = ["Mike Zhu <zhuyuan2706@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.22"
volatile = "0.2.7"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]

[profile.release]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 200          # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false